wrote add guidelines

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -1,3 +1,60 @@
+@article{wasserstein2016,
+  doi = {10.1080/00031305.2016.1154108},
+  url = {https://doi.org/10.1080/00031305.2016.1154108},
+  year = {2016},
+  month = apr,
+  publisher = {Informa {UK} Limited},
+  volume = {70},
+  number = {2},
+  pages = {129--133},
+  author = {Ronald L. Wasserstein and Nicole A. Lazar},
+  title = {The {ASA} Statement on \textit{p}-Values: Context,  Process,  and Purpose},
+  journal = {The American Statistician}
+}
+
+
+
+@article{chia1997,
+ ISSN = {03553140, 1795990X},
+ URL = {http://www.jstor.org/stable/40966624},
+ author = {Kee-Seng Chia},
+ journal = {Scandinavian Journal of Work, Environment & Health},
+ number = {2},
+ pages = {152--154},
+ publisher = {Scandinavian Journal of Work, Environment & Health},
+ title = {"Significant-itis" — an obsession with the P-value},
+ urldate = {2022-12-22},
+ volume = {23},
+ year = {1997}
+}
+
+
+
+
+@article{greenland2016,
+  doi = {10.1007/s10654-016-0149-3},
+  url = {https://doi.org/10.1007/s10654-016-0149-3},
+  year = {2016},
+  month = apr,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {31},
+  number = {4},
+  pages = {337--350},
+  author = {Sander Greenland and Stephen J. Senn and Kenneth J. Rothman and John B. Carlin and Charles Poole and Steven N. Goodman and Douglas G. Altman},
+  title = {Statistical tests,  P values,  confidence intervals,  and power: a guide to misinterpretations},
+  journal = {European Journal of Epidemiology}
+}
+
+@book{ziliak2008,
+  title     = "The cult of statistical significance",
+  author    = "Ziliak, Stephen Thomas and McCloskey, Deirdre",
+  publisher = "University of Michigan Press",
+  series    = "Economics, Cognition \& Society",
+  month     =  apr,
+  year      =  2008,
+  address   = "Ann Arbor, MI"
+}
+
 @incollection{xie2016,
   title     = "bookdown: Authoring Books and Technical Documents with R Markdown",
   booktitle = "The {R} Series",
