--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -1,3 +1,30 @@
+@article{freedman1999,
+     author = {Freedman, David},
+     title = {From association to causation : some remarks on the history of statistics},
+     journal = {Journal de la Soci\'et\'e fran\c{c}aise de statistique},
+     pages = {5--32},
+     publisher = {Soci\'et\'e fran\c{c}aise de statistique},
+     volume = {140},
+     number = {3},
+     year = {1999},
+     language = {en},
+     url = {http://www.numdam.org/item/JSFS_1999__140_3_5_0/}
+}
+
+@article{huberty1993,
+  doi = {10.1080/00220973.1993.10806593},
+  url = {https://doi.org/10.1080/00220973.1993.10806593},
+  year = {1993},
+  month = jul,
+  publisher = {Informa {UK} Limited},
+  volume = {61},
+  number = {4},
+  pages = {317--333},
+  author = {Carl J Huberty},
+  title = {Historical Origins of Statistical Testing Practices},
+  journal = {The Journal of Experimental Education}
+}
+
 @article{wasserstein2016,
   doi = {10.1080/00031305.2016.1154108},
   url = {https://doi.org/10.1080/00031305.2016.1154108},
@@ -12,8 +39,6 @@
   journal = {The American Statistician}
 }
 
-
-
 @article{chia1997,
  ISSN = {03553140, 1795990X},
  URL = {http://www.jstor.org/stable/40966624},
@@ -27,9 +52,6 @@
  volume = {23},
  year = {1997}
 }
-
-
-
 
 @article{greenland2016,
   doi = {10.1007/s10654-016-0149-3},
@@ -46,7 +68,7 @@
 }
 
 @book{ziliak2008,
-  title     = "The cult of statistical significance",
+  title     = "The cult of statistical significance:  How the standard error costs us jobs, justice, and lives",
   author    = "Ziliak, Stephen Thomas and McCloskey, Deirdre",
   publisher = "University of Michigan Press",
   series    = "Economics, Cognition \& Society",
