--- a/sections/02-guidelines.Rmd
+++ b/sections/02-guidelines.Rmd
@@ -57,13 +57,15 @@ Table: Tools that allow for reproducible statistical analyses
 
 Perhaps the aspect of statistical reproducibility that biomedical researchers struggle the most is the concept of significance and its association with a _p-value_ below 0.05. Much has been said about the limitations of statistical tests and p-values, and how it is wrong to dichotomize the "significance" of a result on the basis of a p-value cutoff, and yet, this is still a prevalent practice in the field.
 
-Here, we will not attempt to provide another repetition of the facts that others have so eloquently provided about this topic (we refer the reader to the excellent works of Ziliak and McCloskey[@ziliak2008], Greenland et al. [@greenland2016], Wasserstein and Lazar [@wasserstein2016], and Chia [@chia1997] for discussions in detail), but we much rather try to bring light on why the "p-value equals significance" is so prevalent in biomedical research.
+Here, we will not attempt to provide another repetition of the facts that others have so eloquently provided about this topic (we refer the reader to the excellent works of Ziliak and McCloskey[@ziliak2008], Greenland et al. [@greenland2016], Wasserstein and Lazar [@wasserstein2016], and Chia [@chia1997] for discussions in detail), but we much rather try to shed some light on why the "_p_-values <0.05 equals significance" is so prevalent in biomedical research.
 
-In part, we believe that this approach has similar roots on the causes we described in Point 1: researchers view Statistics as a black box where multiple obscure terms such as "distribution", "likelihood", and "parameters" among others lie. On top of that, the language required to gain a proper understanding of a what a p-value tells requires technical language that for a non-statistician sounds obscure and purposely confusing
+We believe that this problem has multiple facets: First, there is the issue of how researchers view statistics, which closely relates to that we described in Point 1. Researchers view Statistics as a black box where multiple obscure terms such as "distribution", "likelihood", "parameters", and many greek letters are mixed up along a language whose technicalities are incomprehensible and confusing. In a sense, it is true that technical statistical language is a completely different beast from the research language that biomedical researchers commonly employ; comprehensibly, trying to learn a new technical language might seem as a daunting task for which researchers, facing already time constraints due to research and academic life, might not feel to have the time or resources to learn. Adding to this problematic, introductory statistical courses and textbooks typically do not discuss the limitations of _p_-values in a clear way [@greenland2016].
 
-The other part of the problem lies on the fact that the dichotomization of significance is rooted in the reward system that dominates the field. In other words, researchers perpetually suffer from "significant-itis" [@chia1997] (believing that results are only good if the p-value is <0.05) because such results are viewed as correct, whereas higher p-values are immediately viewed as cause of "failure". 
+Second, the dichotomization of significance is the driving force that the field uses to measure research outcomes. In other words, researchers perpetually suffer from "significant-itis" [@chia1997] (believing that results are only good if the p-value is <0.05) because such metrics are ubiquitously presented in publications as the correct metric to measure the success or failure of a research outcome.
 
-These two facts create a vicious cycle that traps researchers early in their training stages, being passed on to those that enter the field. Add to this the fact that introductory statistical courses and textbooks typically do not discuss the limitations of a p-value in a clear way [@greenland2016].
+These two facts then, create a vicious cycle where researchers are perpetually working to find "significant results", and makes trainees believe early on that that is the correct way of validating research outcomes. We believe it is important to remind researchers that statistical significance does not equate to clinical significance [@greenland2016], that _p_-values are just a way to determine how the data behaves under the model assumptions, and that they are the result of historical and philosophical choices made by people [@huberty1993;@freedman1999].  
+
+
 
 The other part of the problem is what 
 the view of statistical tests as an obscure and complicat
