--- a/main_document.tex
+++ b/main_document.tex
@@ -85,16 +85,10 @@ practical guides for the everyday researcher }
     \titlerunning{Enhancing statistical reproducibility in the
 biomedical sciences}
 
-\author{  Ariel Mundo Ortiz \and  Ariel Mundo Ortiz \and  Bouchra
-Nasri \and  }
+\author{  Ariel Mundo Ortiz \and  Bouchra Nasri \and  }
 
 
 \institute{
-        Ariel Mundo Ortiz \at
-    \\
-     %  \\
-%             \emph{Present address:} of F. Author  %  if needed
-    \and
         Ariel Mundo Ortiz \at
      École de santé publique, Université de Montréal, \newline Centre de
 recherches mathématiques, Université de Montréal \\
@@ -135,9 +129,6 @@ reproducibility.
 \def\spacingset#1{\renewcommand{\baselinestretch}%
 {#1}\small\normalsize} \spacingset{1}
 
-
-\hypertarget{abstract}{%
-\section{Abstract}\label{abstract}}
 
 \hypertarget{background}{%
 \section{Background}\label{background}}
@@ -391,31 +382,41 @@ that others have so eloquently provided about this topic (we refer the
 reader to the excellent works of Ziliak and
 McCloskey\textsuperscript{26}, Greenland et al.\textsuperscript{27},
 Wasserstein and Lazar\textsuperscript{28}, and Chia\textsuperscript{29}
-for discussions in detail), but we much rather try to bring light on why
-the ``p-value equals significance'' is so prevalent in biomedical
-research.
+for discussions in detail), but we much rather try to shed some light on
+why the ``\emph{p}-values \textless0.05 equals significance'' is so
+prevalent in biomedical research.
 
-In part, we believe that this approach has similar roots on the causes
-we described in Point 1: researchers view Statistics as a black box
+We believe that this problem has multiple facets: First, there is the
+issue of how researchers view statistics, which closely relates to that
+we described in Point 1. Researchers view Statistics as a black box
 where multiple obscure terms such as ``distribution'', ``likelihood'',
-and ``parameters'' among others lie. On top of that, the language
-required to gain a proper understanding of a what a p-value tells
-requires technical language that for a non-statistician sounds obscure
-and purposely confusing
+``parameters'', and many greek letters are mixed up along a language
+whose technicalities are incomprehensible and confusing. In a sense, it
+is true that technical statistical language is a completely different
+beast from the research language that biomedical researchers commonly
+employ; comprehensibly, trying to learn a new technical language might
+seem as a daunting task for which researchers, facing already time
+constraints due to research and academic life, might not feel to have
+the time or resources to learn. Adding to this problematic, introductory
+statistical courses and textbooks typically do not discuss the
+limitations of \emph{p}-values in a clear way\textsuperscript{27}.
 
-The other part of the problem lies on the fact that the dichotomization
-of significance is rooted in the reward system that dominates the field.
-In other words, researchers perpetually suffer from
-``significant-itis''\textsuperscript{29} (believing that results are
-only good if the p-value is \textless0.05) because such results are
-viewed as correct, whereas higher p-values are immediately viewed as
-cause of ``failure''.
+Second, the dichotomization of significance is the driving force that
+the field uses to measure research outcomes. In other words, researchers
+perpetually suffer from ``significant-itis''\textsuperscript{29}
+(believing that results are only good if the p-value is \textless0.05)
+because such metrics are ubiquitously presented in publications as the
+correct metric to measure the success or failure of a research outcome.
 
-These two facts create a vicious cycle that traps researchers early in
-their training stages, being passed on to those that enter the field.
-Add to this the fact that introductory statistical courses and textbooks
-typically do not discuss the limitations of a p-value in a clear
-way\textsuperscript{27}.
+These two facts then, create a vicious cycle where researchers are
+perpetually working to find ``significant results'', and makes trainees
+believe early on that that is the correct way of validating research
+outcomes. We believe it is important to remind researchers that
+statistical significance does not equate to clinical
+significance\textsuperscript{27}, that \emph{p}-values are just a way to
+determine how the data behaves under the model assumptions, and that
+they are the result of historical and philosophical choices made by
+people\textsuperscript{30,31}.
 
 The other part of the problem is what the view of statistical tests as
 an obscure and complicat
@@ -600,7 +601,8 @@ with r markdown. In: \emph{The {R} Series}. CRC Press; 2016:47-66.}
 \leavevmode\vadjust pre{\hypertarget{ref-ziliak2008}{}}%
 \CSLLeftMargin{26. }%
 \CSLRightInline{Ziliak ST, McCloskey D. \emph{The Cult of Statistical
-Significance}. University of Michigan Press; 2008.}
+Significance: How the Standard Error Costs Us Jobs, Justice, and Lives}.
+University of Michigan Press; 2008.}
 
 \leavevmode\vadjust pre{\hypertarget{ref-greenland2016}{}}%
 \CSLLeftMargin{27. }%
@@ -623,6 +625,20 @@ doi:\href{https://doi.org/10.1080/00031305.2016.1154108}{10.1080/00031305.2016.1
 p-value. \emph{Scandinavian Journal of Work, Environment \& Health}.
 1997;23(2):152-154. Accessed December 22, 2022.
 \url{http://www.jstor.org/stable/40966624}}
+
+\leavevmode\vadjust pre{\hypertarget{ref-huberty1993}{}}%
+\CSLLeftMargin{30. }%
+\CSLRightInline{Huberty CJ. Historical origins of statistical testing
+practices. \emph{The Journal of Experimental Education}.
+1993;61(4):317-333.
+doi:\href{https://doi.org/10.1080/00220973.1993.10806593}{10.1080/00220973.1993.10806593}}
+
+\leavevmode\vadjust pre{\hypertarget{ref-freedman1999}{}}%
+\CSLLeftMargin{31. }%
+\CSLRightInline{Freedman D. From association to causation : Some remarks
+on the history of statistics. \emph{Journal de la Société française de
+statistique}. 1999;140(3):5-32.
+\url{http://www.numdam.org/item/JSFS_1999__140_3_5_0/}}
 
 \end{CSLReferences}
 
